--- a/fxs-platform-web/pom.xml
+++ b/fxs-platform-web/pom.xml
@@ -68,6 +68,10 @@
 			<scope>provided</scope>
 		</dependency>
 		 -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
