--- a/fxs-platform-web/pom.xml
+++ b/fxs-platform-web/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>guava</artifactId>
             <version>19.0</version>
         </dependency>
+        <dependency>
+ 			<groupId>org.webjars</groupId>
+ 			<artifactId>jquery</artifactId>
+			<version>3.0.0</version>
+ 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
