--- a/fxs-platform-web/src/main/resources/application.yml
+++ b/fxs-platform-web/src/main/resources/application.yml
@@ -48,10 +48,10 @@ fxs:
       remember-me-seconds: 29400
       sign-out-url: /user/signIn
       ignoring-url: /city/**
-    session:
-      #maximum-sessions: 1
-      #max-sessions-prevents-login: true
-      session-invalid-url: /fxs-session-invalid.html
+      session:
+        #maximum-sessions: 1
+        #max-sessions-prevents-login: true
+        session-invalid-url: /invalid-session
     #code:
       #image:
         #length: 4
