--- a/fxs-platform-web/src/main/resources/defaultSettings.properties
+++ b/fxs-platform-web/src/main/resources/defaultSettings.properties
@@ -1,2 +1,2 @@
-#scheduling.job.cron=0 55 23 * * ?
-scheduling.job.cron=0/10 * * * * ?
+scheduling.job.cron=0 55 23 * * ?
+#scheduling.job.cron=0/10 * * * * ?
