--- a/fxs-platform-web/pom.xml
+++ b/fxs-platform-web/pom.xml
@@ -41,6 +41,10 @@
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-java8</artifactId>
+		</dependency>
 		<!-- 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
