--- a/fxs-platform-web/src/main/resources/application.yml
+++ b/fxs-platform-web/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/fxs-platform?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/fxs-platform?useUnicode=yes&characterEncoding=UTF-8&useSSL=false&serverTimezone=CTT
     tomcat: 
       max-active: 100
       min-idle: 10
